--- a/package.json
+++ b/package.json
@@ -1073,7 +1073,6 @@
     "yargs-parser": "^18.1.3",
     "yocto-queue": "^0.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -1087,5 +1086,8 @@
   "bugs": {
     "url": "https://github.com/CetinaLuka/captcha-usability/issues"
   },
-  "homepage": "https://github.com/CetinaLuka/captcha-usability#readme"
+  "homepage": "https://github.com/CetinaLuka/captcha-usability#readme",
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+  }
 }
