--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -61,6 +61,7 @@
     "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "^3.4.0",
     "react-simple-captcha": "^8.2.0",
+    "serve": "^13.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "uuid": "^8.3.0",
