--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
