--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "web-vitals": "^2.1.2",
     "yup": "^0.29.3"
   },
-  "homepage": "https://captcha-usability-frontend.herokuapp.com",
+  "homepage": ".",
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
